- Fixes zepto js warning  - Align cover bg image to top

--- a/issues/denim/assets/custom.scss
+++ b/issues/denim/assets/custom.scss
@@ -14,6 +14,10 @@
       font-size: 24px;
       font-weight: bold;
     }
+    
+    figure.cover-area {
+      background-position-y: top;
+    }
   }
 
   [data-page="index"] {
